Found error in frontmatter
There was a slight error in the front matter which I rectified and a missing command in the main tex file which only recently became an issue.

--- a/IntroToPhil.tex
+++ b/IntroToPhil.tex
@@ -16,6 +16,7 @@
 \usepackage[american]{babel}
 \usepackage{csquotes}
 \usepackage[style=mla,autocite=footnote]{biblatex}
+\providecommand\biburldatelong{}
 \addbibresource{bibliography.bib}
 \defbibheading{bibliography}{\chapter*{Bibliography}} 
 \bibliography{bibliography.bib}
