--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -20,7 +20,7 @@
 \newpage
 
 \noindent%
-Questions We Have by Davis Smith is, for the most part, an original introduction to Philosophy textbook. It consists of eleven (11) Modules (sections or parts) which each handle a different philosophical question a person may have wondered about. Aside from the in depth discussions of the various topics which Davis Smith provides, there are 10 primary source works which are reprinted into this text. The questions discussed span from the abstract, such as the purpose of Philosophy, to the concrete, like our moral duties to other people and animals. 
+Questions We Have by Davis Smith is, for the most part, an original introduction to Philosophy textbook. It consists of eleven (11) modules (sections or parts) which each handle a different philosophical question a person may have wondered about. Aside from the in depth discussions of the various topics which Davis Smith provides, there are 10 primary source works which are reprinted into this text. The questions discussed span from the abstract, such as the purpose of Philosophy, to the concrete, like our moral duties to other people and animals. 
 The primary sources used are, in order:
 \begin{enumerate}
 \item[1] Plato's Apology
@@ -28,7 +28,7 @@ The primary sources used are, in order:
 \item[3] The Mind-Body Problem by Tim Crane
 \item[4] Minds, Brains and Programs by John Searle
 \item[5] Are Libertarianism and Physicalism Compatible? by Davis Smith
-\item[6] Are Dualism and Physicalism Compatible? by Davis Smith
+\item[6] Are Dualism and Libertarianism Compatible? by Davis Smith
 \item[7] Meditations on First Philosophy by Ren\'e Descartes
 \item[8] The Challenge of Cultural Relativism by James Rachels
 \item[9] The Moral Status of Bloodbending by Davis Smith
